# screencapture-cpp

./: .gitignore  CMakeLists.txt  CMakeLists_alternatives.txt  README.md
libs/Linux/include/: tiffconf.h
libs/Linux/include/libavutil/: ffversion.h
libs/Linux/include/lv2/: atom  buf-size  core  data-access  dynmanifest  event  instance-access  log  midi  morph  options  parameters  patch  port-groups  port-props  presets  resize-port  state  time  ui  units  uri-map  urid  worker
libs/Linux/include/lv2/lv2plug.in/ns/: lv2core
libs/Linux/include/lv2/lv2plug.in/ns/ext/: atom  buf-size  data-access  dynmanifest  event  instance-access  log  midi  morph  options  parameters  patch  (+9 more)
libs/Linux/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la  libltdl.la  libmp3lame.la  libogg.la  libopencore-amrnb.la  libopencore-amrwb.la  libopus.la  libpcre.la  libpcrecpp.la  libpcreposix.la  libpng16.la  libtheora.la  libtheoradec.la  libtheoraenc.la  libtiff.la  libtiffxx.la  libvorbis.la  libvorbisenc.la  libvorbisfile.la  libzimg.la
libs/Linux/lib/cmake/SDL2/: sdl2-config.cmake
libs/Linux/lib/pkgconfig/: SvtAv1Dec.pc  SvtAv1Enc.pc  aom.pc  dav1d.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpcre.pc  libpcrecpp.pc  libpcreposix.pc  libpng.pc  libpng16.pc  libswresample.pc  libswscale.pc  libtiff-4.pc  libwebp.pc  libwebpdecoder.pc  libwebpdemux.pc  libwebpmux.pc  lilv-0.pc  lv2.pc  ogg.pc  opencore-amrnb.pc  opencore-amrwb.pc  opus.pc  sdl2.pc  serd-0.pc  sord-0.pc  sratom-0.pc  theora.pc  theoradec.pc  theoraenc.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc  vpx.pc  zimg.pc  zlib.pc
libs/Linux/share/WebP/cmake/: WebPConfig.cmake  WebPTargets.cmake
libs/Linux/share/autoconf/: autom4te.cfg
libs/Linux/share/automake-1.16/Automake/: Config.pm
libs/Linux/share/info/: automake.info  automake.info-1  automake.info-2  dir
libs/Linux/share/man/man1/: aclocal-1.16.1  automake-1.16.1
libs/Windows/bin-global/: curl-config
libs/Windows/etc/: profile2.local  toolchain.cmake
libs/Windows/include/: davs2_config.h  x265_config.h  xavs2_config.h
libs/Windows/include/FLAC/: export.h
libs/Windows/include/FLAC++/: export.h
libs/Windows/include/SDL2/: SDL_config.h  SDL_opengl.h  SDL_revision.h  begin_code.h
libs/Windows/include/dav1d/: version.h
libs/Windows/include/libavutil/: ffversion.h
libs/Windows/lib/: libFLAC++.la  libFLAC.la  libSDL2.la  libSDL2_test.la  libSDL2main.la  libcurl.la  libfdk-aac.la  libidn2.la  libopus.la  libopusenc.la  libopusfile.la  libopusurl.la  libpsl.la
libs/Windows/lib/cmake/SDL2/: sdl2-config.cmake
libs/Windows/lib/pkgconfig/: aom.pc  dav1d.pc  davs2.pc  fdk-aac.pc  ffnvcodec.pc  flac++.pc  flac.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libcurl.pc  libidn2.pc  libopusenc.pc  libpostproc.pc  libpsl.pc  libswresample.pc  libswscale.pc  opus.pc  opusfile.pc  opusurl.pc  sdl2.pc  vpx.pc  x264.pc  x265.pc  xavs2.pc
libs/Windows/opt/lightffmpeg/lib/pkgconfig/: liblsmash.pc
src/: AudioDemuxer.cpp  AudioDemuxer.h  Controller.cpp  Controller.h  Decoder.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  DisplayInfo.cpp  DisplayInfo.h  Encoder.cpp  Encoder.h  Muxer.cpp  Muxer.h  ScreenRecorder.cpp  ScreenRecorder.h  VideoDemuxer.cpp  VideoDemuxer.h  main.cpp  utils.h
src/libs/: AudioDemuxer.cpp  AudioDemuxer.h  Controller.cpp  Controller.h  Decoder.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  DisplayInfo.h  Encoder.cpp  Encoder.h  Muxer.cpp  Muxer.h  VideoDemuxer.cpp  VideoDemuxer.h  doc_home_page.md  utils.h
src/libs/docs/: Doxyfile
src/libs/docs/html/: AudioDemuxer_8h_source.html  Controller_8h_source.html  Decoder_8h_source.html  Demuxer_8h_source.html  DisplayInfo_8h_source.html  Encoder_8h_source.html  Muxer_8h_source.html  VideoDemuxer_8h_source.html  annotated.html  classAudioDemuxer-members.html  classAudioDemuxer.html  classController-members.html  classController.html  classDecoder-members.html  classDecoder.html  classDemuxer-members.html  classDemuxer.html  classDisplayInfo-members.html  classDisplayInfo.html  classEncoder-members.html  classEncoder.html  classMuxer-members.html  classMuxer.html  classVideoDemuxer-members.html  classVideoDemuxer.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md__home_pushz_dev_video_app_src_libs_README.html  pages.html  structA-members.html  structA.html  structB-members.html  structB.html  structS-members.html  structS.html  structT-members.html  (+2 more)
src/libs/docs/html/search/: all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js
src/libs/docs/latex/: AudioDemuxer_8h_source.tex  Controller_8h_source.tex  Decoder_8h_source.tex  Demuxer_8h_source.tex  DisplayInfo_8h_source.tex  Encoder_8h_source.tex  Muxer_8h_source.tex  VideoDemuxer_8h_source.tex  annotated.tex  classAudioDemuxer.eps  classAudioDemuxer.tex  classController.tex  classDecoder.tex  classDemuxer.eps  classDemuxer.tex  classDisplayInfo.tex  classEncoder.tex  classMuxer.tex  classVideoDemuxer.eps  classVideoDemuxer.tex  files.tex  hierarchy.tex  index.tex  md__home_pushz_dev_video_app_src_libs_README.tex  refman.tex  structA.tex  structB.tex  structS.tex  structT.tex  utils_8h_source.tex
(+2 files in other folders)
